--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,7 +1,23 @@
 .templ--page-main {}
 
+// Page Builder - Full width image and logo
+.block--half-container {
+	position:relative;
+	height: 35vh;
+	background-position:center;
+	background-size:cover;
+	box-shadow: inset 0 0 0 100vmax rgba(16,24,32,0.6);
+}
+.block--half-inner {
+	position:absolute;
+	left: 50%;
+	top: 50%;
+	transform:translate(-50%,-50%); 
+	width: 70%;
+	text-align: center;
+}
 
-// PAGE BUILDER
+// Page Builder - Callout
 .block--callout {
 	margin-top: $margin--large*4;
 	margin-bottom: $margin--large*4;
@@ -14,7 +30,7 @@
 	}
 }
 
-
+// Page Builder - Callout
 .block--5050 {
 	background-color: rgba(0,0,0,0.2);
 	& h2 {
@@ -24,6 +40,28 @@
 	}
 	& p {
 		font-size: 1.4rem;
+	}
+}
+
+// Page Builder - Team
+.block--team {
+	& h2 {
+		font-family: $brand--font-reg;
+		font-size: 2rem;
+		margin-bottom: $margin--small;
+	}
+	& h4 {
+		@include headingUC;
+		margin-bottom: $margin--general;
+	}
+	& p {
+		font-size: 1.2rem;
+		&.atm__intro {
+			font-size: 1.3rem;
+		}
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 }
 
