--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,8 +356,8 @@ nav a:disabled, nav .nav-link:disabled {
 }
 
 .block--callout {
-  margin-top: 8rem;
-  margin-bottom: 8rem;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
   text-align: center;
   font-size: 2.7rem;
   line-height: 1.4;
