--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -19,8 +19,8 @@
 
 // Page Builder - Callout
 .block--callout {
-	margin-top: $margin--xlarge*2;
-	margin-bottom: $margin--xlarge*2;
+	padding-top: $padding--xlarge*2;
+	padding-bottom: $padding--xlarge*2;
 	text-align: center;
 	font-size: 2.7rem;
 	line-height: 1.4;
