--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,8 +1,7 @@
 /* Colors
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-$color--primary: #101820; // Charcoal
+$color--primary: #101820; // Navy Charcoal
 $color--secondary: #fff;
-$color--tertiary: #798d91;
 $color--white: #fff; // white
 $color--black: #000; // black
 
