--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -77,9 +77,8 @@ nav {
 @media (max-width: $breakpoint--navigation - 1px){
 	.offcanvas.offcanvas-end {
 		backdrop-filter: blur(7px);
-		background-color: rgba(#111,0.8);
+		background-color: rgba($color--black,0.33);
 		color: $color--white;
-		border-left: 5px solid black;
 		& h2 {
 			color: white;
 		}
@@ -109,17 +108,31 @@ nav {
 			}
 		}
 		& .offcanvas-header button.btn-close {
-			background: unset;
 			opacity: unset;
-			background: yellow;
+			background-color: rgba(255,255,255,0.06);
+			border: 2px solid rgba(255,255,255,0.12);
 			& i {
-				color: green;
+				color: rgba($color--white,0.5);
 				&:hover {
-					color: orange;
+					color: $color--white;
 				}
 			}
 		}
 	}
+}
+
+.custom-toggler.navbar-toggler {
+	border-width: 2px;
+ 	border-color: rgba(255,255,255,0.1)!important;
+ 	& .navbar-toggler-icon {
+ 		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+ 	}
+}
+
+.btn-close {
+	width: 2rem;
+    height: 2rem;
+	background: unset!important;
 }
 
 
