--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -33,6 +33,10 @@
 // Page Builder - Callout
 .block--5050 {
 	background-color: rgba(0,0,0,0.2);
+	& .mol--5050 {
+		color: $color--white; 
+		padding: $padding--small;
+	}
 	& h2 {
 		color: $color--white;
 		font-size: 2.8rem;
@@ -85,6 +89,14 @@
 	}
 }
 
+
+@media (min-width: $media-tablet) {
+	.block--5050 {
+		& .mol--5050 {
+			padding: $padding--xlarge;
+		}
+	}
+}
 
 // TO SORT BELOW
 .home {
