--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,7 +385,7 @@ nav a:disabled, nav .nav-link:disabled {
 }
 .block--5050 .mol--5050 {
   color: #fff;
-  padding: 1rem;
+  padding: 2rem 1rem;
 }
 .block--5050 h2 {
   color: #fff;
