Update the acf additional

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,7 @@ nav a:disabled, nav .nav-link:disabled {
   margin-bottom: 8rem;
 }
 .block--team .mol--unit-team {
-  padding: 1rem 2rem;
+  padding: 2rem;
 }
 .block--team h2 {
   font-family: "AvertaStdPE-Regular", Arial, Helvetica, sans-serif;
