--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -69,7 +69,7 @@ pl--page-main {}
 .block--team {
 	margin-bottom: $margin--xlarge*2;
 	& .mol--unit-team {
-		padding: $padding--small $padding--general;
+		padding: $padding--general;
 	}
 	& h2 {
 		font-family: $brand--font-reg;
