--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,5 +1,9 @@
-pl--page-main {}
-
+@media (max-width:$media-mobile) {
+	.container-fluid {
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
 
 .mol--theme-light {
 	background-color: $color--white;
@@ -14,7 +18,7 @@ pl--page-main {}
 // Page Builder - Full width image and logo
 .block--half-container {
 	position:relative;
-	height: 35vh;
+	height: 40vh;
 	background-position:center;
 	background-size:cover;
 	box-shadow: inset 0 0 0 100vmax rgba(16,24,32,0.6);
@@ -46,7 +50,7 @@ pl--page-main {}
 		margin-bottom: $margin--general;
 	}
 	& p {
-		font-size: 1.4rem;
+		font-size: 1.2rem;
 	}
 }
 
@@ -54,6 +58,7 @@ pl--page-main {}
 // Page Builder - Block 50/50
 .block--5050 {
 	& .mol--5050 {
+		max-width: 900px;
 		padding: $padding--general $padding--small;
 	}
 	& h2 {
@@ -61,7 +66,7 @@ pl--page-main {}
 		margin-bottom: $margin--general;
 	}
 	& p {
-		font-size: 1.4rem;
+		font-size: 1.2rem;
 	}
 }
 
