--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,5 +1,10 @@
 header {
-	background-color: rgba(0,0,0,0.2);
+	background-color: $color--primary-dark;
+	box-shadow: 0 0 10px rgba(0,0,0,0.7);
+	position:fixed; 
+	top:0; 
+	z-index:20;
+	width:100%;
 }
 
 .sticky-header {
