--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -7,13 +7,6 @@ header {
 	width:100%;
 }
 
-.sticky-header {
-	position: fixed;
-	top: 0;
-	z-index: 500;
-}
-
-/* To include WordPress Admin */
-.admin-bar .sticky-header {
+.admin-bar header {
 	top: 32px;
 }
