--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -18,7 +18,7 @@
 // Page Builder - Full width image and logo
 .block--half-container {
 	position:relative;
-	height: 45vh;
+	height: 600px;
 	background-position:center;
 	background-size:cover;
 	box-shadow: inset 0 0 0 100vmax rgba(16,24,32,0.6);
@@ -34,12 +34,11 @@
 
 // Page Builder - Callout
 .block--callout {
-	text-align: center;
-	font-size: 2rem;
+	font-size: 1.6rem;
 	line-height: 1.4;
 	& .mol---block-callout {
-		padding-top: $padding--xlarge*2;
-		padding-bottom: $padding--xlarge*2;
+		padding-top: $padding--xlarge;
+		padding-bottom: $padding--xlarge;
 	}
 	& span {
 		display: block;
@@ -66,13 +65,14 @@
 		margin-bottom: $margin--general;
 	}
 	& p {
-		font-size: 1.2rem;
+		font-size: 1.1rem;
+		line-height: 1.6;
 	}
 }
 
 // Page Builder - Team
 .block--team {
-	margin-bottom: $margin--xlarge*2;
+	margin-bottom: $margin--xlarge;
 	& .mol--unit-team {
 		padding: $padding--general;
 	}
@@ -95,9 +95,9 @@
 		}
 	}
 	& p {
-		font-size: 1.2rem;
+		font-size: 1.1rem;
 		&.atm--intro {
-			font-size: 1.4rem;
+			font-size: 1.2rem;
 		}
 		&:last-child {
 			margin-bottom: 0;
