--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,9 +213,14 @@ header {
 }
 
 .admin-bar header {
-  top: 32px;
+  top: 42px;
 }
 
+@media (min-width: 768px) {
+  .admin-bar header {
+    top: 32px;
+  }
+}
 nav a {
   text-transform: uppercase;
   letter-spacing: 0.2em;
