--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -8,5 +8,11 @@ header {
 }
 
 .admin-bar header {
-	top: 32px;
+	top: 42px;
+}
+
+@media(min-width:$media-tablet ) {
+	.admin-bar header {
+		top: 32px;
+	}
 }
