--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,6 +339,7 @@ nav a:disabled, nav .nav-link:disabled {
   }
 }
 .custom-toggler.navbar-toggler {
+  margin-right: 5px;
   border-width: 2px;
   border-color: rgba(255, 255, 255, 0.1) !important;
 }
