--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -123,6 +123,7 @@ nav {
 }
 
 .custom-toggler.navbar-toggler {
+	margin-right: 5px;
 	border-width: 2px;
  	border-color: rgba(255,255,255,0.1)!important;
  	& .navbar-toggler-icon {
