--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,7 +380,7 @@ nav a:disabled, nav .nav-link:disabled {
 
 .block--half-container {
   position: relative;
-  height: 600px;
+  height: 520px;
   background-position: center;
   background-size: cover;
   box-shadow: inset 0 0 0 100vmax rgba(16, 24, 32, 0.6);
@@ -474,6 +474,9 @@ nav a:disabled, nav .nav-link:disabled {
 }
 
 @media (min-width: 768px) {
+  .block--half-container {
+    height: 600px;
+  }
   .block--5050 .mol--5050 {
     padding: 4rem;
   }
