--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -481,6 +481,15 @@ nav a:disabled, nav .nav-link:disabled {
     padding: 4rem;
   }
 }
+@media (min-width: 1400px) {
+  .block--half-container {
+    height: 720px;
+  }
+  .mol---block-callout {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+}
 footer {
   background-color: rgba(0, 0, 0, 0.2);
   padding: 2rem 1rem;
