--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -116,7 +116,9 @@ $margin--small: $base-value;
 $margin--general: $base-value*2;
 $margin--large: $base-value*3;
 $margin--xlarge: $base-value*4;
+$margin--xxlarge: $base-value*5;
 $padding--small: $base-value;
 $padding--general: $base-value*2;
 $padding--large: $base-value*3;
 $padding--xlarge: $base-value*4;
+$padding--xxlarge: $base-value*5;
