--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -130,8 +130,10 @@
 	.block--half-container {
 		height: 700px;
 	}
-	.mol---block-callout {
-		padding-top: $padding--xxlarge;
-		padding-bottom: $padding--xxlarge;
+	.block--callout {
+		& .mol---block-callout {
+			padding-top: $padding--xxlarge;
+			padding-bottom: $padding--xxlarge;
+		}
 	}
 }
